# OD_training

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/od_training/: BertForSequenceClassification_pl.py  config.yaml  originarity_detector_test.py  originarity_detector_train.py
src/od_training/util/: genCsv.py
